css flex touchup

--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -208,6 +208,7 @@ li.focus a:hover {
 #user-list,
 #user-listz {
 	display: flex;
+	align-items: center;
 	.mng-usr,
 	.transfer-usr {
 		font-size: 1em;
