Just don't know what's left now...
tons of stuff in this commit - including: shows username or email address when you select the opposite in either transfer_meeting or user_management. both also sort alphabetically on both username and email address. tabs to "house" both individually - and all mobile-sharp!

--- a/components/sass/_email-host-modal.scss
+++ b/components/sass/_email-host-modal.scss
@@ -120,6 +120,7 @@ body.noscrollz {
       display: flex;
       justify-content: space-around;
       margin: 1em auto;
+      -webkit-appearance: none;
       input.send {
         width: 100%;
         border: 1px solid green;
