--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -238,6 +238,7 @@ form.admin-email-form {
 			font-size: 1em;
 			flex: 1;
 			text-align: center;
+			-webkit-appearance: none;
 			transition: all 0.2s ease; 
 			&:hover {
 				background-color: rgba(255,255,255,0.2);
@@ -248,6 +249,7 @@ form.admin-email-form {
 		}
 		& > input[type="submit"].submit-email {
 			background-color: rgba(60,186,4,1);
+			-webkit-appearance: none;
 			&:hover {
 			background-color: rgba(60,186,4,0.2);
 			}
@@ -1054,6 +1056,7 @@ form#manage-mtg {
 		flex: 1;
 		text-align: center;
 		margin-top: 1.5em;
+		-webkit-appearance: none;
 		transition: all 0.2s ease;
 	}
 	a.cancel {
