--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -1116,7 +1116,7 @@ form#manage-mtg {
     width: 100%;
     padding: 1em;
     background-color: transparent;
-    border: 1px solid transparent;
+    border: 1px solid rgba(255,255,255,0.2);
     cursor:pointer;
     margin: 2px 0; 
     transition: all 0.2s ease;
