added role-key to entire site
members can see their privileges from nav

--- a/components/sass/_host-management.scss
+++ b/components/sass/_host-management.scss
@@ -124,6 +124,9 @@
 			background-color: rgba(64,178,8,0.4);
 		}
 	}	
+	a#transfer-this.ap {
+		margin-top: 1.5em;
+	}
 	a#select-role-first,
 	a#not-yourself {
 		cursor: not-allowed;
