--- a/style-expanded.css
+++ b/style-expanded.css
@@ -329,6 +329,10 @@ html {
 .sidenav .member-role,
 .sidenav .sus-user {
   width: 300px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
 }
 .sidenav .admin-role {
   padding: 1em 0em 1em 1.5em;
@@ -407,6 +411,10 @@ html {
 }
 .sidenav a.closebtn i:hover {
   animation: out .5s 1 linear;
+}
+.sidenav a.admin-login,
+.sidenav a.admin-logout {
+  cursor: pointer;
 }
 .sidenav a.admin-login {
   color: gold;
@@ -1365,14 +1373,31 @@ div#success-wrap span.success-msg {
 a#toggle-lat-long-msg,
 a#toggle-descriptive-location,
 a#toggle-pdf-info,
-a#toggle-link-label {
+a#toggle-link-label,
+a#toggle-role-key {
   cursor: pointer;
   color: #5dcb5d;
 }
 a#toggle-lat-long-msg:hover,
 a#toggle-descriptive-location:hover,
 a#toggle-pdf-info:hover,
-a#toggle-link-label:hover {
+a#toggle-link-label:hover,
+a#toggle-role-key:hover {
+  color: #fff;
+}
+
+a#toggle-role-key {
+  color: #bccdd1;
+  color: rgba(255, 255, 255, 0.4);
+  padding: 0px;
+  margin-left: 0.5em;
+  font-size: 1.2em;
+  background-color: transparent;
+  width: auto;
+  transition: all 0.2s ease;
+}
+a#toggle-role-key:hover {
+  background-color: transparent;
   color: #fff;
 }
 
@@ -1388,7 +1413,8 @@ a#gmaps:hover {
 #lat-long,
 #desc-loc,
 #pdf-upload,
-#link-label {
+#link-label,
+#role-key {
   cursor: pointer;
   position: relative;
   width: 100%;
@@ -1410,7 +1436,8 @@ a#gmaps:hover {
 #lat-long .msg-bkg,
 #desc-loc .msg-bkg,
 #pdf-upload .msg-bkg,
-#link-label .msg-bkg {
+#link-label .msg-bkg,
+#role-key .msg-bkg {
   position: relative;
   height: 100%;
   min-height: 100vh;
@@ -1428,7 +1455,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one,
 #desc-loc .inside-msg-one,
 #pdf-upload .inside-msg-one,
-#link-label .inside-msg-one {
+#link-label .inside-msg-one,
+#role-key .inside-msg-one {
   position: relative;
   padding: 50px;
   background-color: rgba(44, 73, 106, 0.99);
@@ -1436,11 +1464,39 @@ a#gmaps:hover {
   max-width: 900px;
   margin-bottom: 20px;
 }
+#msg-one .inside-msg-one ul,
+#lat-long .inside-msg-one ul,
+#desc-loc .inside-msg-one ul,
+#pdf-upload .inside-msg-one ul,
+#link-label .inside-msg-one ul,
+#role-key .inside-msg-one ul {
+  list-style: disc;
+  margin: 0.5em 0 0 1.5em;
+}
+#msg-one .inside-msg-one ul li,
+#lat-long .inside-msg-one ul li,
+#desc-loc .inside-msg-one ul li,
+#pdf-upload .inside-msg-one ul li,
+#link-label .inside-msg-one ul li,
+#role-key .inside-msg-one ul li {
+  line-height: 1.5em;
+}
+#msg-one .inside-msg-one ul li em,
+#lat-long .inside-msg-one ul li em,
+#desc-loc .inside-msg-one ul li em,
+#pdf-upload .inside-msg-one ul li em,
+#link-label .inside-msg-one ul li em,
+#role-key .inside-msg-one ul li em {
+  color: #ffc8c8;
+  letter-spacing: 1px;
+  font-size: 1.2em;
+}
 #msg-one .inside-msg-one > i,
 #lat-long .inside-msg-one > i,
 #desc-loc .inside-msg-one > i,
 #pdf-upload .inside-msg-one > i,
-#link-label .inside-msg-one > i {
+#link-label .inside-msg-one > i,
+#role-key .inside-msg-one > i {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -1451,14 +1507,16 @@ a#gmaps:hover {
 #lat-long .inside-msg-one i.fa-peace,
 #desc-loc .inside-msg-one i.fa-peace,
 #pdf-upload .inside-msg-one i.fa-peace,
-#link-label .inside-msg-one i.fa-peace {
+#link-label .inside-msg-one i.fa-peace,
+#role-key .inside-msg-one i.fa-peace {
   font-size: 2em;
 }
 #msg-one .inside-msg-one p.peace-sign,
 #lat-long .inside-msg-one p.peace-sign,
 #desc-loc .inside-msg-one p.peace-sign,
 #pdf-upload .inside-msg-one p.peace-sign,
-#link-label .inside-msg-one p.peace-sign {
+#link-label .inside-msg-one p.peace-sign,
+#role-key .inside-msg-one p.peace-sign {
   width: 100%;
   text-align: center;
 }
@@ -1466,7 +1524,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one > h1,
 #desc-loc .inside-msg-one > h1,
 #pdf-upload .inside-msg-one > h1,
-#link-label .inside-msg-one > h1 {
+#link-label .inside-msg-one > h1,
+#role-key .inside-msg-one > h1 {
   font-size: 1.3em;
   margin-bottom: 0.5em;
   line-height: 1.3em;
@@ -1475,7 +1534,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one p,
 #desc-loc .inside-msg-one p,
 #pdf-upload .inside-msg-one p,
-#link-label .inside-msg-one p {
+#link-label .inside-msg-one p,
+#role-key .inside-msg-one p {
   color: #fff;
   line-height: 1.5em;
   margin-top: 1em;
@@ -1484,7 +1544,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one > hr,
 #desc-loc .inside-msg-one > hr,
 #pdf-upload .inside-msg-one > hr,
-#link-label .inside-msg-one > hr {
+#link-label .inside-msg-one > hr,
+#role-key .inside-msg-one > hr {
   margin: 1em auto;
   width: 90%;
 }
@@ -1492,7 +1553,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one a.pdf,
 #desc-loc .inside-msg-one a.pdf,
 #pdf-upload .inside-msg-one a.pdf,
-#link-label .inside-msg-one a.pdf {
+#link-label .inside-msg-one a.pdf,
+#role-key .inside-msg-one a.pdf {
   color: #fff;
   transition: all 0.2s ease;
 }
@@ -1500,14 +1562,16 @@ a#gmaps:hover {
 #lat-long .inside-msg-one a.pdf:hover,
 #desc-loc .inside-msg-one a.pdf:hover,
 #pdf-upload .inside-msg-one a.pdf:hover,
-#link-label .inside-msg-one a.pdf:hover {
+#link-label .inside-msg-one a.pdf:hover,
+#role-key .inside-msg-one a.pdf:hover {
   color: rgba(255, 255, 255, 0.6);
 }
 #msg-one .inside-msg-one p.info-links,
 #lat-long .inside-msg-one p.info-links,
 #desc-loc .inside-msg-one p.info-links,
 #pdf-upload .inside-msg-one p.info-links,
-#link-label .inside-msg-one p.info-links {
+#link-label .inside-msg-one p.info-links,
+#role-key .inside-msg-one p.info-links {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -1524,7 +1588,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one p.info-links > a,
 #desc-loc .inside-msg-one p.info-links > a,
 #pdf-upload .inside-msg-one p.info-links > a,
-#link-label .inside-msg-one p.info-links > a {
+#link-label .inside-msg-one p.info-links > a,
+#role-key .inside-msg-one p.info-links > a {
   color: #fff;
   background-color: #2c7778;
   border: 1px solid #fff;
@@ -1549,21 +1614,24 @@ a#gmaps:hover {
 #lat-long .inside-msg-one p.info-links > a:hover,
 #desc-loc .inside-msg-one p.info-links > a:hover,
 #pdf-upload .inside-msg-one p.info-links > a:hover,
-#link-label .inside-msg-one p.info-links > a:hover {
+#link-label .inside-msg-one p.info-links > a:hover,
+#role-key .inside-msg-one p.info-links > a:hover {
   background-color: rgba(44, 119, 120, 0.5);
 }
 #msg-one .inside-msg-one p.aa-link,
 #lat-long .inside-msg-one p.aa-link,
 #desc-loc .inside-msg-one p.aa-link,
 #pdf-upload .inside-msg-one p.aa-link,
-#link-label .inside-msg-one p.aa-link {
+#link-label .inside-msg-one p.aa-link,
+#role-key .inside-msg-one p.aa-link {
   margin-top: 1.5em;
 }
 #msg-one .inside-msg-one a.bingo,
 #lat-long .inside-msg-one a.bingo,
 #desc-loc .inside-msg-one a.bingo,
 #pdf-upload .inside-msg-one a.bingo,
-#link-label .inside-msg-one a.bingo {
+#link-label .inside-msg-one a.bingo,
+#role-key .inside-msg-one a.bingo {
   color: #fff;
   text-decoration: underline;
   padding: 0px;
@@ -1572,14 +1640,16 @@ a#gmaps:hover {
 #lat-long .inside-msg-one a.bingo:hover,
 #desc-loc .inside-msg-one a.bingo:hover,
 #pdf-upload .inside-msg-one a.bingo:hover,
-#link-label .inside-msg-one a.bingo:hover {
+#link-label .inside-msg-one a.bingo:hover,
+#role-key .inside-msg-one a.bingo:hover {
   text-decoration: none;
 }
 #msg-one .inside-msg-one p.daccaa-ctr,
 #lat-long .inside-msg-one p.daccaa-ctr,
 #desc-loc .inside-msg-one p.daccaa-ctr,
 #pdf-upload .inside-msg-one p.daccaa-ctr,
-#link-label .inside-msg-one p.daccaa-ctr {
+#link-label .inside-msg-one p.daccaa-ctr,
+#role-key .inside-msg-one p.daccaa-ctr {
   width: 100%;
   text-align: center;
   display: block;
@@ -1588,7 +1658,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one a.daccaa,
 #desc-loc .inside-msg-one a.daccaa,
 #pdf-upload .inside-msg-one a.daccaa,
-#link-label .inside-msg-one a.daccaa {
+#link-label .inside-msg-one a.daccaa,
+#role-key .inside-msg-one a.daccaa {
   color: #fff;
   padding: 10px 20px;
   text-decoration: none;
@@ -1602,7 +1673,8 @@ a#gmaps:hover {
 #lat-long .inside-msg-one a.daccaa:hover,
 #desc-loc .inside-msg-one a.daccaa:hover,
 #pdf-upload .inside-msg-one a.daccaa:hover,
-#link-label .inside-msg-one a.daccaa:hover {
+#link-label .inside-msg-one a.daccaa:hover,
+#role-key .inside-msg-one a.daccaa:hover {
   background-color: #a3abb4;
   color: #fff;
 }
@@ -1620,7 +1692,8 @@ a.youtube:hover {
   #lat-long .msg-bkg,
   #desc-loc .msg-bkg,
   #pdf-upload .msg-bkg,
-  #link-label .msg-bkg {
+  #link-label .msg-bkg,
+  #role-key .msg-bkg {
     -ms-flex-pack: start;
         justify-content: flex-start;
     overflow-y: auto;
@@ -1631,7 +1704,8 @@ a.youtube:hover {
   #lat-long .inside-msg-one,
   #desc-loc .inside-msg-one,
   #pdf-upload .inside-msg-one,
-  #link-label .inside-msg-one {
+  #link-label .inside-msg-one,
+  #role-key .inside-msg-one {
     padding: 45px 25px 50px;
     width: 92%;
     margin-bottom: 120px;
@@ -1640,7 +1714,8 @@ a.youtube:hover {
   #lat-long .inside-msg-one > i,
   #desc-loc .inside-msg-one > i,
   #pdf-upload .inside-msg-one > i,
-  #link-label .inside-msg-one > i {
+  #link-label .inside-msg-one > i,
+  #role-key .inside-msg-one > i {
     top: 10px;
     right: 10px;
   }
@@ -1648,7 +1723,8 @@ a.youtube:hover {
   #lat-long .inside-msg-one p.info-links,
   #desc-loc .inside-msg-one p.info-links,
   #pdf-upload .inside-msg-one p.info-links,
-  #link-label .inside-msg-one p.info-links {
+  #link-label .inside-msg-one p.info-links,
+  #role-key .inside-msg-one p.info-links {
     margin-bottom: 2em;
   }
 }
@@ -1657,7 +1733,8 @@ a.youtube:hover {
   #lat-long .inside-msg-one p.aa-link,
   #desc-loc .inside-msg-one p.aa-link,
   #pdf-upload .inside-msg-one p.aa-link,
-  #link-label .inside-msg-one p.aa-link {
+  #link-label .inside-msg-one p.aa-link,
+  #role-key .inside-msg-one p.aa-link {
     margin-bottom: 3em;
   }
 }
@@ -3912,6 +3989,9 @@ span.sending-msg.downgraded {
 #transfer-host a#change-user-role:hover {
   background-color: rgba(64, 178, 8, 0.4);
 }
+#transfer-host a#transfer-this.ap {
+  margin-top: 1.5em;
+}
 #transfer-host a#select-role-first,
 #transfer-host a#not-yourself {
   cursor: not-allowed;
@@ -4273,8 +4353,7 @@ li.focus a:hover {
   cursor: pointer;
   padding: 0.5em 1em;
   margin-left: 1em;
-  background-color: #376420;
-  border: 1px solid transparent;
+  background-color: #40b208;
   color: #fff;
   transition: all 0.2s ease;
 }
@@ -4294,9 +4373,8 @@ li.focus a:hover {
 #user-listz #usr-role-goz:hover,
 #user-listz #transfer-this-top:hover,
 #user-listz #transfer-this-topz:hover {
-  background-color: #80eb4b;
-  border: 1px solid #fff;
-  color: #1c3310;
+  background-color: rgba(64, 178, 8, 0.4);
+  color: #fff;
 }
 
 #flash-email-top,
