think I finally have user_management sorted out
no really... a bunch of stuff to tighten up all the bloated code in js pertaining to handling of the sus_notes and css pre-wrap

--- a/components/sass/_host-management.scss
+++ b/components/sass/_host-management.scss
@@ -197,11 +197,11 @@ h2.change-role.upgrade {
 		color: #fff;
 		padding: 0.5em 0.5em 0.5em 1em;
 	}
-	p.sus-notes {
-		margin: 0 0 1em;
-		padding: 1em;
-		background-color: rgba(0,0,0,0.6);
-	}
+	// p.sus-notes {
+	// 	margin: 0 0 1em;
+	// 	padding: 1em;
+	// 	background-color: rgba(0,0,0,0.6);
+	// }
 }
 #sus-reason {
 	margin: 0;
